[gd_scene load_steps=6 format=3 uid="uid://dlpht0u33tj5w"]

[ext_resource type="Script" path="res://core/battle/battle.gd" id="1_2ebqg"]
[ext_resource type="Script" path="res://core/battle/ui.gd" id="2_qqiwe"]
[ext_resource type="Texture2D" uid="uid://wskuqy31lfdo" path="res://forest_battle.jpg" id="2_r23pm"]
[ext_resource type="PackedScene" uid="uid://bbq3aqpr1ywob" path="res://core/player/player.tscn" id="3_pwrrh"]
[ext_resource type="PackedScene" uid="uid://eiw6acf4xft7" path="res://core/player/enemy.tscn" id="4_gebkq"]

[node name="Battle" type="Node2D"]
script = ExtResource("1_2ebqg")

[node name="Background" type="TextureRect" parent="."]
z_as_relative = false
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("2_r23pm")

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("2_qqiwe")

[node name="MarginContainer" type="MarginContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="TurnQueue" type="HBoxContainer" parent="UI/MarginContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
alignment = 1

[node name="EndTurn" type="Button" parent="UI/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "End Turn"

[node name="Spots" type="Node" parent="UI"]

[node name="Player" parent="." instance=ExtResource("3_pwrrh")]
position = Vector2(416, 360)

[node name="Player2" parent="." instance=ExtResource("3_pwrrh")]
position = Vector2(288, 464)

[node name="Player3" parent="." instance=ExtResource("3_pwrrh")]
position = Vector2(256, 264)

[node name="Player4" parent="." instance=ExtResource("3_pwrrh")]
position = Vector2(128, 376)

[node name="Enemy" parent="." instance=ExtResource("4_gebkq")]
position = Vector2(736, 360)

[node name="Enemy2" parent="." instance=ExtResource("4_gebkq")]
position = Vector2(864, 464)

[node name="Enemy3" parent="." instance=ExtResource("4_gebkq")]
position = Vector2(896, 264)

[node name="Enemy4" parent="." instance=ExtResource("4_gebkq")]
position = Vector2(1024, 376)

[connection signal="pressed" from="UI/MarginContainer/EndTurn" to="UI" method="_on_end_turn_pressed"]
